--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,12 @@ services:
       - CHROMADB_HOST=chromadb
       - CHROMADB_COLLECTION_NAME=students_autumn
       - USE_STREAM=True
+      - OPENAI_API_KEY=$OPENAI_API_KEY
+      - POSTGRES_USER=$POSTGRES_USER
+      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+      - POSTGRES_DB=$POSTGRES_DB
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
     networks:
       - net
 
